--- a/templates/card.html
+++ b/templates/card.html
@@ -1,9 +1,12 @@
-<section class="card"> 
-    <img src="" alt="">
-    <article>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-    </article>
-</section>
+
+{% block card %}
+    <section class="card"> 
+        <img src="" alt="">
+        <article>
+            <p>{{ card.texto1 }}</p>
+            <p>{{ card.texto2 }}</p>
+            <p>{{ card.texto3 }}</p>
+            <p></p>
+        </article>
+    </section>
+{% endblock %}
