--- a/templates/main.html
+++ b/templates/main.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>funcionou</title>
+
+
+    <style>
+        body {
+            background-color: purple;
+        }
+    </style>
 </head>
 <body>
-    
-    {% include "funciona.html" %}
+    {% block home %}{% endblock %}
 </body>
 </html>
