--- a/templates/main.html
+++ b/templates/main.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>funcionou</title>
 
 
-    <style>
-        body {
-            background-color: purple;
-        }
-    </style>
+    {% block cssstart %} {% endblock %}
 </head>
 <body>
     {% block home %}{% endblock %}
+    {% block start %}{% endblock %}
 </body>
 </html>
